--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,3 +8,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 godot = "0.4.2"
+tokio = { version = "1", features = ["full"] }
+common = { path = "../common" }
+bincode = "2.0.1"
