--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+common = { path = "../common" }
+bincode = "2.0.1"
+serde = { version = "1.0", features = ["derive"] }
