--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { version = "1", features = ["full"] }
 common = { path = "../common" }
 bincode = "2.0.1"
 serde = { version = "1.0", features = ["derive"] }
+uuid = { version = "1.4", features = ["v4"] }
