--- a/godot/export_presets.cfg
+++ b/godot/export_presets.cfg
@@ -5,11 +5,11 @@ platform="Linux"
 runnable=true
 advanced_options=false
 dedicated_server=false
-custom_features="desktop, x11"
+custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/linux/test.x86_64"
+export_path="../../export/linux/RustyArena.x86_64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -22,7 +22,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=0
+debug/export_console_wrapper=1
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
