--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,3 +11,6 @@ godot = "0.4.2"
 tokio = { version = "1", features = ["full"] }
 common = { path = "../common" }
 bincode = "2.0.1"
+reqwest = { version = "0.12", features = ["json"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
